--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "@types/jest": "^23.3.13",
     "jest": "^24.0.0",
     "prettier": "^1.16.2",
+    "rxjs": "^6.4.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.4"
   },
-  "dependencies": {
+  "peerDependencies": {
     "rxjs": "^6.4.0"
   }
 }
