--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.1",
   "description": "Asynchronous functions for observables.",
   "types": "dist/index.d.ts",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
+    "build:cjs": "tsc --project tsconfig.commonjs.json",
+    "build:es": "tsc --project tsconfig.es2015.json",
+    "build": "npm run build:cjs && npm run build:es",
     "lint": "tsc --noEmit && tslint --project tsconfig.json 'src/**/*.{ts,tsx}'",
     "test": "jest"
   },
@@ -21,7 +27,10 @@
     "rx",
     "rxjs"
   ],
-  "repository": "https://github.com/thejohnfreeman/await-observable",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thejohnfreeman/await-observable.git"
+  },
   "bugs": {
     "url": "https://github.com/thejohnfreeman/await-observable/issues"
   },
@@ -40,5 +49,8 @@
   },
   "peerDependencies": {
     "rxjs": "^6.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
