Do not forget to build before publishing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": true,
-    // Attach inline source maps.
+    // Emit separate source maps.
     "sourceMap": true,
     // Suppress noImplicitAny errors when indexing.
     "suppressImplicitAnyIndexErrors": true,
