--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "rxjs": "^6.4.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.17.0",
+    "tslint-config-thejohnfreeman": "^1.0.1",
     "typescript": "^3.2.4"
   },
   "peerDependencies": {
